# imc_case

./: .$pipeline_v1_c4_diagram.drawio.bkp  .$pipeline_v1_c4_diagram_2.drawio.bkp  README.md  pipeline_v1_c4_diagram.drawio
airflow/: dag_financial_data.py  dag_financial_extract.py
financial_aggregate/: Makefile  constants.py  context.py  main.py  pyproject.toml  requirements.txt  service.py
financial_extract/: Makefile  README.md  context.py  logger.py  main.py  metrics.py  mocks.py  pyproject.toml  requirements.txt  service.py
financial_transform/: context.py  errors.py  main.py  pyproject.toml  requirements.txt  service.py
gcloud/: cf_financial_extract  cf_financial_extract.cmd  cf_financial_transform.cmd
sql/: bq_bronze_financial_extract.sql  bq_gold_financial_extract.sql  bq_silver_financial_transform.sql  ingestion_job_config.sql  ingestion_job_execution.sql
